--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,40 @@
 # =================================
+# DWC SERVER - ENVIRONMENT CONFIGURATION
+# =================================
+# Copy this file to .env and configure your settings
+
+# =================================
+# DJANGO SETTINGS (Required)
+# =================================
+# Generate with: openssl rand -base64 50
+SECRET_KEY=change-me-in-production
+
+# Debug mode (set to False in production)
+DEBUG=True
+
+# Allowed hosts (comma-separated)
+ALLOWED_HOSTS=localhost,127.0.0.1,*
+
+# =================================
+# API AUTHENTICATION (Required)
+# =================================
+# Generate with: openssl rand -hex 20
+NAS_API_TOKEN=change-me-generate-a-token
+
+# API URL (internal Docker network)
+API_BASE_URL=http://admin:7999/api
+
+# =================================
 # DATABASE CONFIGURATION
 # =================================
 # Options: sqlite, mariadb
 DATABASE_ENGINE=sqlite
 
-# For SQLite (default)
+# SQLite settings (default)
 DATABASE_NAME=dwc_server.db
 
-# For MariaDB (uncomment if using mariadb)
+# MariaDB settings (uncomment for GTS support)
+# DATABASE_ENGINE=mariadb
 # DATABASE_NAME=dwc_server
 # DATABASE_USER=dwc
 # DATABASE_PASSWORD=changeme
@@ -18,76 +45,24 @@ DATABASE_NAME=dwc_server.db
 # =================================
 # GTS (GLOBAL TRADE STATION)
 # =================================
-# Pokemon GTS Server database (requires MariaDB profile)
+# Pokemon GTS database (requires MariaDB profile)
 GTS_DB_NAME=gts
 GTS_DB_USER=gts
 GTS_DB_PASSWORD=gts
 
 # =================================
-# DJANGO SETTINGS
+# ADMIN PANEL (Optional)
 # =================================
-SECRET_KEY=change-me-in-production-to-something-random-and-long
-DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1,*
-
-# =================================
-# GAMESPY SERVER SETTINGS
-# =================================
-# NAS (Nintendo Authentication Server)
-NAS_HOST=0.0.0.0
-NAS_PORT=8080
-
-# GP (GameSpy Presence)
-GP_HOST=0.0.0.0
-GP_PORT=29900
-
-# QR (Query & Reporting)
-QR_HOST=0.0.0.0
-QR_PORT=27900
-
-# SB (Server Browser)
-SB_HOST=0.0.0.0
-SB_PORT=28910
-
-# NN (NAT Negotiation)
-NN_HOST=0.0.0.0
-NN_PORT=27901
-
-# =================================
-# ADMIN PANEL
-# =================================
-ADMIN_PORT=8000
-API_BASE_URL=http://admin:7999/api
-NAS_API_TOKEN=changeme-generate-a-token-here
+# Superuser auto-creation (set all three to enable)
+# DJANGO_SUPERUSER_USERNAME=admin
+# DJANGO_SUPERUSER_PASSWORD=changeme
+# DJANGO_SUPERUSER_EMAIL=admin@example.com
 
 # Gunicorn settings
 GUNICORN_WORKERS=2
 GUNICORN_TIMEOUT=120
 
-# Superuser auto-creation (optional - set all three to enable)
-# DJANGO_SUPERUSER_USERNAME=admin
-# DJANGO_SUPERUSER_PASSWORD=changeme
-# DJANGO_SUPERUSER_EMAIL=admin@example.com
-
-# =================================
-# APACHE PROXY (NEW)
-# =================================
-# Server IP/Domain for Nintendo domains
-SERVER_IP=159.69.106.42
-
-# Apache Ports
-APACHE_HTTP_PORT=80
-APACHE_HTTPS_PORT=443
-
 # =================================
 # LOGGING
 # =================================
 LOG_LEVEL=INFO
-
-# =================================
-# PRODUCTION SETTINGS (Optional)
-# =================================
-# Uncomment for production:
-# DEBUG=False
-# SECRET_KEY=generate-a-really-long-random-string-here
-# ALLOWED_HOSTS=159.69.106.42,nas.nintendowifi.net,naswii.nintendowifi.net
