--- a/.github/workflows/ghcr-deployment.yml
+++ b/.github/workflows/ghcr-deployment.yml
@@ -45,6 +45,12 @@ env:
   REGISTRY: ghcr.io
   IMAGE_PREFIX: ${{ github.repository_owner }}/dwc-server
 
+# Global permissions for all jobs
+permissions:
+  contents: read
+  packages: write
+  id-token: write
+
 jobs:
   build-apache:
     if: ${{ github.event_name == 'push' || github.event.inputs.build_all == 'true' || github.event.inputs.build_apache == 'true' }}
@@ -101,6 +107,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -146,6 +154,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
