Add-Feature: Implemented new DLC feature/funtion to download content from Server

--- a/apache-configs/dls1_nintendowifi_net.conf
+++ b/apache-configs/dls1_nintendowifi_net.conf
@@ -1,22 +1,59 @@
+# HTTP VirtualHost (redirect to HTTPS or direct proxy)
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
     ServerName dls1.nintendowifi.net
-    
+
     # Logging
     ErrorLog "logs/dls-error.log"
     CustomLog "logs/dls-access.log" combined
-    
+
     # Preserve real client IP
     RemoteIPHeader X-Forwarded-For
     RemoteIPInternalProxy 172.19.0.0/16
-    
+
     # Proxy to GameSpy DLS Server
     ProxyPreserveHost On
     ProxyPass / http://dwc-gamespy:9003/
     ProxyPassReverse / http://dwc-gamespy:9003/
-    
+
     # Forward real client IP
     RequestHeader set X-Real-IP "%{REMOTE_ADDR}s"
     RequestHeader set X-Forwarded-For "%{REMOTE_ADDR}s"
     RequestHeader set X-Forwarded-Proto "http"
+</VirtualHost>
+
+# HTTPS VirtualHost (Nintendo DS uses HTTPS for DLS1)
+<VirtualHost *:443>
+    ServerAdmin webmaster@localhost
+    ServerName dls1.nintendowifi.net
+
+    # Logging
+    ErrorLog "logs/dls-ssl-error.log"
+    CustomLog "logs/dls-ssl-access.log" combined
+
+    # SSL Configuration with SSLv3 support
+    SSLEngine on
+    SSLCertificateFile /usr/local/apache2/conf/certs/server.crt
+    SSLCertificateKeyFile /usr/local/apache2/conf/certs/server.key
+    SSLCertificateChainFile /usr/local/apache2/conf/certs/nwc.crt
+
+    # CRITICAL: Enable SSLv3 for Nintendo DS/Wii
+    SSLProtocol all -SSLv2
+    SSLCipherSuite RC4-SHA:3DES-EDE-CBC-SHA:AES128-SHA:!aNULL:!eNULL
+    SSLHonorCipherOrder on
+
+    # Preserve real client IP
+    RemoteIPHeader X-Forwarded-For
+    RemoteIPInternalProxy 172.19.0.0/16
+
+    # Proxy to GameSpy DLS Server
+    ProxyPreserveHost On
+    ProxyPass / http://dwc-gamespy:9003/
+    ProxyPassReverse / http://dwc-gamespy:9003/
+
+    # Forward real client IP and SSL info
+    RequestHeader set X-Real-IP "%{REMOTE_ADDR}s"
+    RequestHeader set X-Forwarded-For "%{REMOTE_ADDR}s"
+    RequestHeader set X-Forwarded-Proto "https"
+    RequestHeader set X-Forwarded-Port "443"
 </VirtualHost>
