--- a/apache-configs/nas_nintendowifi_net.conf
+++ b/apache-configs/nas_nintendowifi_net.conf
@@ -23,6 +23,12 @@
     
     # Proxy to NAS Server (Python 3)
     ProxyPreserveHost On
+
+    # DLC/Download requests go to DLS1 server (port 9003)
+    ProxyPass /download http://dwc-gamespy:9003/download
+    ProxyPassReverse /download http://dwc-gamespy:9003/download
+
+    # Everything else goes to NAS server (port 8080)
     ProxyPass / http://dwc-gamespy:8080/
     ProxyPassReverse / http://dwc-gamespy:8080/
     
